updated website homepage and layouts archive

--- a/website/notebook/archive/layouts/index.html
+++ b/website/notebook/archive/layouts/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>past page layouts</title>
-	<link rel="icon" type="image/x-icon" href="favicon.gif">
+	<link rel="icon" type="image/x-icon" href="/notebook/favicon.gif">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
 	<link href="/notebook/archive/archive.css" rel="stylesheet" type="text/css" media="all">
 	<link href="/notebook/body.css" rel="stylesheet" type="text/css" media="all">
@@ -46,9 +46,14 @@
 			<h1>page layouts</h1>
 		</center>
 
+		<p>showcasing the different layouts my pages have had over time! they are from <b>newest to oldest</b></p>
+
 		<h2>landing pages</h2>
+		<img title="dec 2023 - inspired by madoka rebellion" src="231214-pmmm-landing.jpg">
 		<img title="nov 2023" src="231214-landing.jpg">
 		<img title="halloween 2023" src="231001-index-halloweenver.jpg">
+		<img title="sep 2023" src="230914-landing.jpg">
+		<img title="may 2023 - my first landing page! i think??" src="230514-landing-momoc.jpg">
 
 		<h2>about</h2>
 		<img title="september 2023 / current!" src="230901-aboutv3.jpg">
@@ -56,17 +61,23 @@
 		<img title="april 2023" src="230417-aboutv1.jpg">
 
 		<h2>listening log</h2>
+		<img title="october 2023" src="231214-listeninglog.jpg">
 		<img title="may 2023" src="230601-listeninglog-v2.jpg">
 		<img title="april 2023" src="230416-listening-log-v1.jpg">
 
 		<h2>music index</h2>
+		<img title="v3" src="231214-music.jpg">
 		<img title="v2.2" src="230812-musicv2.2.jpg">
 		<img title="v2.1" src="230521-musicv2.jpg">
 		<img title="v1.2" src="230420-music-v1.2.jpg">
 		<img title="v1" src="230415-music-v1.jpg">
 
 		<h2>journal</h2>
+		<img src="231214-journal.jpg">
 		<img title="april 2023" src="230420-logs.jpg">
+
+		<h2>resources, archives, etc</h2>
+		<img src="230501-other-v1.jpg">
 
 
 
