--- a/website/!f/homepage-v3/flower.css
+++ b/website/!f/homepage-v3/flower.css
@@ -1,7 +1,5 @@
 /*https://coolors.co/90619d-fe6d92-ffb5d5-a9d079-2e6314-c39684-f4b535-4a90c6-bfe1f2-edf4f7*/
 
-/*main colors: yellow, blue, mint green */
-
 :root {
 	--d-yellow: #F4B535;
 	--l-yellow: #FFEBAF;
@@ -144,8 +142,10 @@ nav a {
 
 nav a:hover {
 	letter-spacing: 0px;
-	background: url('/!g/bg/h049-6.gif');
-	border: 1px solid var(--l-yellow);
+	background: url('/!g/bg/h056-4.gif');
+	background-size: 50px;
+	border: 2px solid white;
+	color: var(--black);
 	margin-left: 20px;
 }
 
@@ -185,27 +185,6 @@ button:hover {
 	line-height: 23px;
 }
 
-#statuscafe {
-	font-family: nintendo-ds-bios;
-	line-height: 25px;
-	font-size: 19px;
-	word-spacing: 5px;
-	background: white;
-	margin: auto;
-	margin-bottom: 10px;
-	border: 1px solid var(--l-blue);
-	width: 95%;
-	border-radius: 15px;
-}
-
-#statuscafe-username {
-	background: rgb(255, 255, 255);
-	background: radial-gradient(circle, rgba(255, 255, 255, 1) 0%, rgba(171, 215, 246, 1) 86%, rgba(95, 123, 198, 1) 100%);
-	border-radius: 15px 15px 0px 0px;
-	font-size: 17px;
-	font-style: italic;
-}
-
 #status {
 	background-image: url('/!g/homepage/cloud1.png');
 }
@@ -215,74 +194,86 @@ button:hover {
 	text-decoration: none;
 }
 
-#chatbox,
-#chatbox h2 {
-	background: rgb(191, 225, 242);
-	background: linear-gradient(137deg, rgba(191, 225, 242, 1) 0%, rgba(255, 247, 223, 1) 48%, rgba(255, 181, 213, 1) 100%);
-	border: var(--border2);
+#statuscafe {
+	font-family: nintendo-ds-bios, var(--fonts);
+	line-height: 25px;
+	font-size: 19px;
+	word-spacing: 5px;
+	background: url('/!g/bg/h009-3.gif');
+	background-size: 35px;
+	margin: auto;
+	margin-bottom: 10px;
+	border: 1px solid var(--l-blue);
+	width: 95%;
+	border-radius: 15px;
 }
 
-#chatbox {
-	z-index: 10;
-	transition-duration: 1.5s;
+#statuscafe-username {
+	padding: 1px 7px;
+	text-align: left;
+	color: white;
+	background: rgb(95, 123, 198);
+	background: linear-gradient(90deg, rgba(95, 123, 198, 1) 0%, rgba(251, 213, 249, 1) 85%, rgba(255, 255, 255, 1) 100%);
+	border-radius: 15px 15px 0px 0px;
+	font-size: 17px;
+	font-style: italic;
 }
 
-#chatbox h2 {
-	border-radius: 10px 10px 0px 0px;
-	margin: 0px;
-	padding: 10px;
-	left: -27%;
-	top: 70%;
+#statuscafe-username a {
+	color: white;
+	letter-spacing: 3px;
 }
 
-#chatbox h2::before {
-	content: url('/!g/pix/msg.gif');
-	padding-right: 4px;
-}
-
-.hl {
-	background: var(--gradient1);
-	background: var(--gradient2);
-	font-family: gaegu-b, var(--fonts);
-	border: 1px solid var(--d-brown);
-	color: var(--d-brown);
-	border-radius: 10px;
-	padding: 2px 3px;
-}
-
-.date {
-	
-	font-family: simple, var(--fonts);
-	font-size: 20px;
-	color:var(--d-blue);
-	background:var(--bg2);
-	line-height: 16px;
-	letter-spacing: 2px;
-	text-align: center;
-	margin:0px;
-	padding-bottom:2px;
-border:1px solid white;
-	border-radius: 20px;
-}
-
-#current i {
-	text-shadow: 1px 1px var(--l-yellow);
-}
-
-#current a {
-	text-shadow: 1px 1px white;
-	color: var(--d-pink);
-	font-weight: normal;
-	text-decoration: none;
-}
-
-#current a:hover {
-	letter-spacing: 0px;
+#statuscafe-username a:hover {
 	text-decoration: underline;
 }
 
-#updates,
+.hl {
+	background: url('/!g/bg/h077-2.gif');
+	background-size: 50px;
+	border: 1px solid var(--black);
+	color: var(--black);
+	border-radius: 10px;
+	padding: 4px;
+	vertical-align: middle
+}
+
 #current {
+	font-family: nintendo-ds-bios, var(--fonts);
+	font-size: 20px;
+	word-spacing: 4px;
+	line-height: 22px;
+}
+
+#current i {
+	text-shadow: 1px 1px white;
+}
+
+#current a {
+	color: var(--black);
+	font-weight: normal;
+}
+
+#current a:hover {
+	letter-spacing: 1px;
+	text-decoration: none;
+}
+
+.date {
+	font-family: simple, var(--fonts);
+	font-size: 20px;
+	color: var(--d-blue);
+	background: var(--bg2);
+	line-height: 16px;
+	letter-spacing: 2px;
+	text-align: center;
+	margin: 0px;
+	padding-bottom: 2px;
+	border: 1px solid white;
+	border-radius: 20px;
+}
+
+#updates {
 	font-family: gaegu-r, var(--fonts);
 	font-size: 18px;
 	line-height: 20px;
@@ -306,16 +297,15 @@ border:1px solid white;
 #updates h2 + li {
 	font-family: gaegu-b, var(--fonts);
 	list-style-image: url('/!g/pix/sorahana-butterfly-pmm.gif');
-	border: 2px solid var(--d-brown);
+	border: 2px solid #EBBBE1;
 	border-radius: 10px;
-	background: url('/!g/bg/h056-4.gif');
-	box-shadow: 0px 0px 17px 2px var(--grey) inset;
+	background: url('/!g/bg/h096-2.gif');
+	box-shadow: 0px 0px 70px 19px white inset;
 }
 
 #updates h2 + li a {
-	font-weight: normal;
-	color: var(--d-brown);
-	text-shadow: 1px 1px var(--grey);
+	color: #908BC2;
+	text-shadow: 1px 1px white;
 }
 
 #updates a:hover {
@@ -346,6 +336,31 @@ border:1px solid white;
 	line-height: 14px;
 }
 
+#chatbox,
+#chatbox h2 {
+	background: rgb(191, 225, 242);
+	background: linear-gradient(137deg, rgba(191, 225, 242, 1) 0%, rgba(255, 247, 223, 1) 48%, rgba(255, 181, 213, 1) 100%);
+	border: var(--border2);
+}
+
+#chatbox {
+	z-index: 10;
+	transition-duration: 1.5s;
+}
+
+#chatbox h2 {
+	border-radius: 10px 10px 0px 0px;
+	margin: 0px;
+	padding: 10px;
+	left: -27%;
+	top: 70%;
+}
+
+#chatbox h2::before {
+	content: url('/!g/pix/msg.gif');
+	padding-right: 4px;
+}
+
 #foot {
 	background: rgb(195, 150, 132, 0.8);
 	color: var(--grey);
@@ -366,7 +381,7 @@ border:1px solid white;
 	content: url('/!g/web/materials/outlink1.png');
 }
 
-/*colors for boxes*/
+/*bgs and borders -------------------------------*/
 
 #updates,
 #listing {
@@ -398,10 +413,10 @@ border:1px solid white;
 	border: var(--border2);
 }
 
-/* strickers */
+/*stickers -------------------------------*/
 
 .deco {
-	pointer-events: all;
+	pointer-events: none;
 }
 
 #sticker1 {
@@ -590,6 +605,8 @@ border:1px solid white;
 	background: linear-gradient(137deg, rgba(191, 225, 242, 1) 0%, rgba(255, 247, 223, 1) 48%, rgba(255, 181, 213, 1) 100%);
 }
 
+/*----------------------------- */
+
 @media only screen and (max-width: 1261px) {
 	#fixed-2 {
 		display: none;
@@ -622,6 +639,10 @@ border:1px solid white;
 		display: inline-block;
 	}
 
+	nav a:hover {
+		margin: normal;
+	}
+
 	#status {
 		background: var(--bg4);
 		border: 3px dotted var(--l-brown);
@@ -630,6 +651,7 @@ border:1px solid white;
 
 	#chatbox {
 		position: relative;
+		margin-top: -10px;
 		left: 0px;
 		top: 0px;
 		border-radius: 20px;
@@ -640,6 +662,10 @@ border:1px solid white;
 
 	#chatbox h2 {
 		display: none;
+	}
+
+	#foot {
+		margin-bottom: 20px;
 	}
 
 }
