--- a/website/!f/index-v3.css
+++ b/website/!f/index-v3.css
@@ -75,7 +75,6 @@ main {
 	line-height: 30px;
 	letter-spacing: 2px;
 	transition-duration: 0.5s;
-	/*	filter: drop-shadow(1px 0px 0 rgb(119, 105, 108, 0.5)) drop-shadow(0px 1px 0 black) drop-shadow(1px -1px 0 rgb(119, 105, 108, 0.5));*/
 }
 
 #rainbow:hover {
@@ -113,47 +112,6 @@ main {
 	padding: 1px 5px;
 	left: -20%;
 	top: 80%;
-}
-
-.hide {
-	display: none;
-}
-
-@media only screen and (max-width: 600px) {
-
-	.hide {
-		display: inline;
-	}
-
-	#rainbow {
-		font-size: 22px;
-	}
-
-	#chatbox {
-		position: relative;
-		left: 0px;
-		top: 0px;
-		margin: auto;
-		margin-bottom: 20px;
-		border-radius: 20px;
-		max-width: 300px;
-		height: 315px;
-	}
-
-	#chatbox h3 {
-		position: relative;
-		rotate: 0deg;
-		background: transparent;
-		border: 0;
-		border-radius: 10px 10px 0px 0px;
-		margin: 15px;
-		left: 0px;
-		top: 0px;
-	}
-
-	#chatbox iframe {
-		height: 228px;
-	}
 }
 
 #webrings {
@@ -229,4 +187,50 @@ footer {
 	border: 1px dashed black;
 	color: black;
 	background: white;
+}
+
+.hide {
+	display: none;
+}
+
+@media only screen and (max-width: 600px) {
+
+	.hide {
+		display: inline;
+	}
+
+	main {
+		margin-top: 60px;
+		margin-bottom: 30px;
+	}
+
+	#rainbow {
+		font-size: 22px;
+	}
+
+	#chatbox {
+		position: relative;
+		left: 0px;
+		top: 0px;
+		margin: auto;
+		margin-bottom: 20px;
+		border-radius: 20px;
+		max-width: 300px;
+		height: 315px;
+	}
+
+	#chatbox h3 {
+		position: relative;
+		rotate: 0deg;
+		background: transparent;
+		border: 0;
+		border-radius: 10px 10px 0px 0px;
+		margin: 15px;
+		left: 0px;
+		top: 0px;
+	}
+
+	#chatbox iframe {
+		height: 228px;
+	}
 }
