--- a/website/music/recaps/body.css
+++ b/website/music/recaps/body.css
@@ -1,40 +1,189 @@
-h3 {
-	text-align: left;
-	font-weight: normal;
+* {
+	box-sizing: border-box;
+}
+
+:root {
+	--fonts: ms pgothic, nanum-r, arial;
+}
+
+article {
+	overflow: hidden;
+}
+
+.cover {
+	width: 30%;
+	margin: 10px;
+	border-radius: 5px;
+	transition-duration: 0.5s;
+}
+
+.cover:hover {
+	rotate: 5deg;
+	filter: grayscale(50%);
+}
+
+body {
+	word-wrap: break-word;
+	margin: 0px;
+	font-family: var(--fonts);
+	line-height: 24px;
+	word-spacing: 2px;
 	font-size: 18px;
-	background: var(--brown);
-	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
-	-webkit-text-stroke-width: 0px;
-	margin-left: 20px;
+	color: var(--dark);
+}
+
+a {
+	text-decoration: none;
+	padding: 0px 5px;
+	color: var(--dark);
+	background: var(--3);
+	font-weight: bold;
+	border-radius: 5px;
+	cursor: help;
+}
+
+::selection {
+	color: var(--1);
+	background: var(--dark);
+}
+
+h3::selection {
+	background: var(--bright);
+}
+
+a:hover {
+	color: var(--dark);
+	background: var(--light);
+}
+
+.outlink::after {
+	content: url(/!g/web/materials/outlink1.png);
+	padding-left: 3px;
+	vertical-align: top;
+}
+
+.outlink:hover::after {
+	content: url(/!g/web/materials/outlink2.png);
+}
+
+b {
+	letter-spacing: 2px;
+	text-shadow: 1px 1px 2px var(--2);
+}
+
+i {
+	color: var(--l-brown);
+	letter-spacing: 1px;
+	text-shadow: 1px 1px 2px var(--3);
+}
+
+mark {
+	padding: 0px 2px;
+	background: var(--light);
+}
+
+li {
+	list-style-position: inside;
+}
+
+p {
+	transition-duration: 0.3s;
+}
+
+p img {
+	vertical-align: middle;
+}
+
+p:hover {
+	background: white;
+}
+
+summary {
+	padding-left: 10px;
+	padding: 5px;
+	cursor: help;
+}
+
+blockquote {
+	border-left: 2px dashed var(--2);
+	padding-left: 10px;
+}
+
+.spoiler {
+	padding: 0px 5px;
+	color: var(--3);
+	background: var(--3);
+}
+
+.spoiler:hover {
+	color: var(--light);
+}
+
+.emoji2:after {
+	content: "s";
+	color: var(--1);
+	font-family: emojifont;
 }
 
 h1 {
+	font-family: katto;
+	font-size: 50px;
 	text-align: center;
 }
 
-.date {
-	font-size: 16px;
-	text-align: right;
+h2,
+h4,
+h5 {
+	font-family: natsuzemi;
+	letter-spacing: 2px;
+	word-spacing: 6px;
+}
+
+
+h3 {
+	font-family: daydream;
+	font-size: 17px;
+	line-height: 27px;
+	letter-spacing: 2px;
+	word-spacing: 8px;
+	background: var(--gradient1);
+	background: var(--gradient2);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	-webkit-text-stroke-width: 0.4px;
+	-webkit-text-stroke-color: var(--dark);
 }
 
 main {
-	background: white;
+	background: var(--light);
 	max-width: 700px;
 	margin: auto;
 	padding: 5px 10px 10px 10px;
-	border: 2px solid var(--l-brown);
+	border: 2px solid var(--light);
 	border-top: none;
 	border-bottom: none;
 }
 
 footer {
 	padding: 10px;
-	background: var(--soft-brown);
-	color: var(--yellow);
+	background: var(--dark);
+	color: var(--light);
 	text-align: center;
 	max-width: 700px;
 	margin: auto;
 	margin-bottom: 20px;
 	border: 2px solid var(--l-brown);
+	border-radius: 0px 0px 10px 10px;
+}
+
+#s-m-t-tooltip {
+	max-width: 400px;
+	text-align: center;
+	z-index: 9999;
+	margin: 30px 15px 7px 12px;
+	padding: 5px;
+	border-radius: 5px;
+	border: 5px double var(--2);
+	color: var(--light);
+	background-color: var(--dark);
 }
