changed featured page in homepage
+ changed some stuff in the homepage css

--- a/website/!f/homepage-v3/body.css
+++ b/website/!f/homepage-v3/body.css
@@ -188,6 +188,12 @@ nav a {
 
 #featured-page a img {
 	width: 100%;
+	border-radius: 20px;
+	transition-duration: 0.8s;
+}
+
+#featured-page a img:hover {
+	filter: brightness(70%);
 }
 
 #button {
