--- a/website/scrapbook/body.css
+++ b/website/scrapbook/body.css
@@ -1,5 +1,10 @@
 :root {
 	--fonts: gaegu-l, ms pgothic, arial;
+	--blue: #8DD1F1;
+	--pink: #ECBAD0;
+	--yellow: #ECDF8C;
+	--green: #A6D898;
+	--black: #4C4C4C;
 }
 
 * {
@@ -8,21 +13,114 @@
 
 body {
 	font-family: var(--fonts);
-	font-size: 16px;
+	font-size: 18px;
 	margin: 0px;
+	color: var(--black);
 }
 
 li {
 	list-style-position: inside;
 }
 
+summary {
+	cursor: help;
+	font-family: gaegu-b, var(--fonts);
+}
+
+details {
+	font-size: 15px;
+}
+
+b {
+	font-weight: normal;
+	font-family: gaegu-b, var(--fonts);
+}
+
+a {
+	cursor: help;
+	font-family: gaegu-b, var(--fonts);
+	color: var(--black);
+	background: var(--blue);
+	border-radius: 4px;
+	padding: 0px 2px;
+	text-decoration: none;
+}
+
+a:hover {
+	background: var(--green);
+}
+
+mark {
+	background: var(--yellow);
+	padding: 0px 2px;
+}
+
+h1 {
+	margin: 10px;
+	font-family: newpenji, var(--fonts);
+	background: rgb(236, 186, 208);
+	background: linear-gradient(90deg, rgba(236, 186, 208, 1) 26%, rgba(201, 220, 146, 1) 51%, rgba(141, 209, 241, 1) 72%);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	-webkit-text-stroke-width: 0px;
+	-webkit-text-stroke-color: black;
+	text-decoration: wavy underline;
+	text-decoration-color: var(--yellow);
+	font-weight: normal;
+	letter-spacing: 5px;
+	text-align: center;
+}
+
+h2 {
+	padding: 0px 10px 0 0;
+	margin: 15px 20px 15px 20px;
+	height: 14px;
+	line-height: 0px;
+	border-radius: 2px;
+	background: var(--yellow);
+	font-family: garden-cursive, var(--fonts);
+	font-weight: normal;
+	letter-spacing: 1px;
+	font-size: 40px;
+	text-align: right;
+}
+
+h3 {
+	padding: 0px 10px 0 0;
+	margin: 5px 400px 5px 100px;
+	height: 25px;
+	border-radius: 10px;
+	background: var(--green);
+	border: 1px solid var(--black);
+	font-family: newpenji, var(--fonts);
+	font-weight: normal;
+	letter-spacing: 1px;
+	font-size: 20px;
+}
+
+header.page {
+	max-width: 500px;
+}
+
+.contents a {
+	background: var(--yellow);
+
+}
+
 .scrap-img {
 	width: 20%;
+	padding: 10px;
+	background: white;
 	margin: 10px;
-	border: 3px solid black;
-	border-radius: 5px 10px;
+	border: 2px solid var(--green);
+	border-radius: 3px;
 	line-height: 0px;
 	overflow: hidden;
+	transition-duration: 0.5s;
+}
+
+.scrap-img img {
+	border-radius: 2px 10px;
 }
 
 .left {
@@ -30,24 +128,13 @@ li {
 	float: left;
 }
 
+.left:hover {
+	rotate: -2deg;
+}
+
 .right {
 	rotate: -2deg;
 	float: right;
-}
-
-h1 {
-	font-family: newpenji, var(--fonts);
-	font-weight: normal;
-	letter-spacing: 5px;
-	text-align: center;
-}
-
-h2 {
-	font-family: newpenji, var(--fonts);
-	font-weight: normal;
-	letter-spacing: 3px;
-	font-size: 30px;
-	text-align: right;
 }
 
 .page {
@@ -60,13 +147,18 @@ h2 {
 	border-radius: 10px;
 }
 
-li details {
-	display: inline-block;
+li summary::after {
+	content: url('/!g/pix/msgbbl.gif');
 }
 
+li details,
 li summary {
 	display: inline;
-	cursor: help;
+	padding: 0px 1px;
+	border-radius: 4px;
+	background: var(--pink);
+	margin-bottom: 3px;
+	font-size: 17px;
 }
 
 li.played {
@@ -90,14 +182,13 @@ footer {
 }
 
 #s-m-t-tooltip {
-	max-width: 200px;
+	max-width: 400px;
 	font-family: var(--fonts);
 	text-align: center;
 	z-index: 999;
 	margin: 30px 15px 7px 12px;
 	padding: 5px;
+	border: 1px solid white;
 	border-radius: 10px;
-	border: 1px dashed black;
-	color: black;
-	background: white;
+	background: var(--pink);
 }
