updated notebook's archive
- added a page for ... archived pages!
- removed to-do's and replaced it with git hub's issues

--- a/website/notebook/archive/layouts/index.html
+++ b/website/notebook/archive/layouts/index.html
@@ -66,7 +66,7 @@
 		<img title="april 2023" src="230416-listening-log-v1.jpg">
 
 		<h2>music index</h2>
-		<img title="v3" src="231214-music.jpg">
+		<img title="oct 2023 - v3" src="231214-music.jpg">
 		<img title="v2.2" src="230812-musicv2.2.jpg">
 		<img title="v2.1" src="230521-musicv2.jpg">
 		<img title="v1.2" src="230420-music-v1.2.jpg">
@@ -76,8 +76,13 @@
 		<img src="231214-journal.jpg">
 		<img title="april 2023" src="230420-logs.jpg">
 
+		<h2>blog</h2>
+		<img title="nov 2023" src="231127-blog.jpg">
+		<img title="aug 2023" src="230814-blog.jpg">
+
 		<h2>resources, archives, etc</h2>
-		<img src="230501-other-v1.jpg">
+		<img title="nov 2023" src="231126-notebook.jpg">
+		<img title="may 2023" src="230501-other-v1.jpg">
 
 
 
